@@ -25,7 +25,7 @@
 
 PRGNAM=kdeartwork
 VERSION=${VERSION:-4.10.5}  
-BUILD=${BUILD:-1}
+BUILD=${BUILD:-2}
 TAG=${TAG:-_microlinux}   
 
 NUMJOBS=${NUMJOBS:--j5}
