@@ -1,0 +1,2 @@
+[Mouse]
+cursorTheme=whiteglass
