@@ -1,0 +1,6 @@
+[KDE]
+SingleClick=false
+
+[General]
+BrowserApplication[$e]=mozilla-firefox.desktop
+EmailClient[$e]=thunderbird
