@@ -1,0 +1,4 @@
+[Favorites]
+FavoriteURLs=/usr/share/applications/mozilla-firefox.desktop,/usr/share/applications/mozilla-thunderbird.desktop,/opt/openoffice4/share/xdg/startcenter.desktop,/usr/share/applications/audacious.desktop,/usr/share/applications/kde4/dolphin.desktop
+
+
