@@ -1,0 +1,3 @@
+[Compositing]
+Enabled=false
+
