@@ -1,0 +1,2 @@
+[Settings]
+gtk-theme-name = oxygen-gtk
