@@ -24,8 +24,8 @@
 #  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 PRGNAM=user-settings-kde
-VERSION=${VERSION:-1.0}	 
-BUILD=${BUILD:-5}
+VERSION=${VERSION:-4.10.5}	 
+BUILD=${BUILD:-1}
 TAG=${TAG:-_microlinux}		
 
 ARCH=noarch # hardcode ARCH
@@ -41,10 +41,18 @@ rm -rf $PKG
 mkdir -p $TMP $PKG $OUTPUT
 cd $TMP
 
-mkdir -p $PKG/etc/skel
-tar xvf $CWD/config.tar.bz2 -C $PKG/etc/skel/
+# Desktop
+mkdir -p $PKG/etc/skel/Desktop
 
-# Since we're using Xfce, we might as well add a ready-made ~/.xinitrc
+# KDE userspace default settings
+mkdir -p $PKG/etc/skel/.kde/share/config
+cp -a $CWD/kde/* $PKG/etc/skel/.kde/share/config/
+
+# Oxygen GTK3
+mkdir -p $PKG/etc/skel/.config/gtk-3.0
+cat $CWD/settings.ini > $PKG/etc/skel/.config/gtk-3.0/settings.ini
+
+# Since we're using KDE, we might as well add a ready-made ~/.xinitrc
 cat $CWD/xinitrc > $PKG/etc/skel/.xinitrc
 
 mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
