@@ -1,40 +1,32 @@
 #!/bin/sh
-#  xinitrc.xfce - modified to work around xfce4session bug
-#                 https://bugzilla.xfce.org/show_bug.cgi?id=8841
-
-
-########################################################################
-##  Merge in defaults and keymaps                                     ##
-########################################################################
+# $XConsortium: xinitrc.cpp,v 1.4 91/08/22 11:41:34 rws Exp $
 
 userresources=$HOME/.Xresources
 usermodmap=$HOME/.Xmodmap
 sysresources=/etc/X11/xinit/.Xresources
 sysmodmap=/etc/X11/xinit/.Xmodmap
 
+# merge in defaults and keymaps
+
 if [ -f $sysresources ]; then
-    /usr/bin/xrdb -merge $sysresources
+    xrdb -merge $sysresources
 fi
 
 if [ -f $sysmodmap ]; then
-    /usr/bin/xmodmap $sysmodmap
+    xmodmap $sysmodmap
 fi
 
 if [ -f $userresources ]; then
-    /usr/bin/xrdb -merge $userresources
+    xrdb -merge $userresources
 fi
 
 if [ -f $usermodmap ]; then
-    /usr/bin/xmodmap $usermodmap
+    xmodmap $usermodmap
 fi
 
-########################################################################
-##  Start xfce Desktop Environment                                    ##
-########################################################################
-
+# Start the window manager:
 if [ -z "$DESKTOP_SESSION" -a -x /usr/bin/ck-launch-session ]; then
-  exec ck-launch-session dbus-launch --exit-with-session /usr/bin/startxfce4
+    ck-launch-session startkde
 else
-  exec dbus-launch --exit-with-session /usr/bin/startxfce4
+    startkde
 fi
-
